[tool.poetry]
name = "hello-world-llm"
version = "0.1.0"
description = ""
authors = ["Chiraj Jayaraman <chiraj.pepz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = {extras = ["full"], version = "^0.0.295"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
