[tool.poetry]
name = "hello-world-llm"
version = "0.1.0"
description = ""
authors = ["Chiraj Jayaraman <chiraj.pepz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
langchain = {extras = ["full"], version = "^0.0.295"}
openai = "^0.28.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
huggingface-hub = "^0.17.2"
tiktoken = "^0.5.1"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
faiss-cpu = "^1.7.4"


[tool.poetry.dev-dependencies]
jupyterlab = "^4.0.6"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
